@@ -1,2 +1,5 @@
+Czech (cs)
+	Pavel Fric <pavelfric@seznam.cz>
+
 Russian (ru)
 	Alexandre Prokoudine <alexandre.prokoudine@gmail.com>
